--- a/Kaiserreich Korean Translation/localisation/KR_adjacency_rules_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_adjacency_rules_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  PERMISSION_CONTESTED:0 "분쟁 중"
  PERMISSION_CONTESTED_DESC:0 "소유국과 전쟁을 하고 있기 때문에: $SIDE1|H$ vs $SIDE2|H$"
  PERMISSION_ENEMY:0 "적"
@@ -20,5 +20,8 @@
  BOSPHORUS_STRAIT:0 "보스포루스 해협"
  DARDANELLES:0 "다르다넬스 해협"
  SHIMONOSEKI:0 "시모노세키 해협"
- MALACCA_STRAIT:0 "말라카 해협"
+ MALACCA_STRAIT:0 "믈라카 해협"
  MESSINA_STRAIT:0 "메시나 해협"
+
+
+ disable_canal_tt:0 "§R이 운하는 부분적으로 파괴되어서, 선박들이 통과하려면 이 운하를 수리해야만 합니다!§!"
