--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -117,7 +117,7 @@ sec_cannot_be_replaced:0 "내무부 장관 재임명 불가"
 ministers_cannot_be_replaced:0 "장관 재임명 불가"
 
 ### Factions ###
-Mittelmacht:0 "Reichspakt"
+Mittelmacht:0 "제국협정"
 Entente:0 "협상국"
 Belgrade_Pact:0 "베오그라드 조약기구"
 Third_International:0 "제 3인터내셔널"
