제국협정 번역

--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -1023,7 +1023,7 @@ comfrance.117.d:0 "필립 스노든(Philip Snowden)은 73세의 일기로 서리
 comfrance.117.a:0 "악마가 죽었다"
 
 comfrance.118.t:0 "독일과 제2차 인터내셔널 회의"
-comfrance.118.d:0 "회의는 독일에게 불안을 가져다주었다. 경제 위기는 아직까지도 완전히 해결되지 않았으며, 사회주의 운동의 모든 전개는 미틀오이로파와 독일 제국을 위협하고 있다. 황제는 그의 최근 연설에서 사회주의자들을 규탄했지만, 말로는 충분하지 않다―이제 행동을 할 때이다."
+comfrance.118.d:0 "회의는 독일에게 불안을 가져다주었다. 경제 위기는 아직까지도 완전히 해결되지 않았으며, 사회주의 운동의 모든 전개는  독일 제국을 위협하고 있다. 황제는 그의 최근 연설에서 사회주의자들을 규탄했지만, 말로는 충분하지 않다―이제 행동을 할 때이다."
 comfrance.118.a:0 "우리는 어떻게든 행동해야한다."
 comfrance.118.b:0 "우리의 이웃들에게 접근한다"
 comfrance.118.c:0 "민심 안정을 위해 좌익 선동가들을 체포한다"
