--- a/Kaiserreich Korean Translation/localisation/KR_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  STATE_UPGRADE_BUILDING:0 "업그레이드 $BUILDING|H$."
  STATE_UPGRADE_BUILDING_DESC:0 "건설 기간: $COST|H$"
  STATE_BUILDING_LEVEL:1 "$BUILDING|H$ (현재 등급: $LEVEL|H$)"
@@ -15,49 +15,49 @@
  STATE_MANPOWER_VALUE:0 "$VAL|2*$"
  STATE_RESISTANCE_GUI:0 "$STRENGTH|%0-$ ($GROWTH|=%0-$)"
  STATE_CORE:0 "§T$COUNTRY|H$이(가) $STATE|H$을(를) 핵심 주로 소유하고 있습니다.§!"
- STATE_CORE_DESC:0 "핵심 주는 국가에 필수적인 부분으로 간주되고 있습니다. 만약 다른 국가에 의해 소유되어 있다면, 그것을 탈환하기 위해 전쟁을 정당화 할 수 있으며, 만약 탈환에 성공하면 점령 정책은 필요하지 않습니다 - 단지 당신의 모국의 일부로 돌아 가기만 하면 됩니다."
+ STATE_CORE_DESC:0 "핵심 주는 국가를 이루는 필수적인 요건입니다. 만약 다른 국가가 소유하고 있다면 탈환을 위해 선전 포고를 정당화할 수 있으며, 수복하게 된다면 점령 정책이 필요하지 않을 것입니다. 되찾기만 한다면 국토의 일부로 되돌아올 것입니다."
  STATE_CLAIM:0 "§T$COUNTRY|H$은(는) $STATE|H$에 대한 영유권을 주장하고 있습니다.§!"
  STATE_POPULATION:3 "§H징병 가능 인구§!: $AVAIL|*Y$/$MAXAVAIL|*Y$\n§H민간인 인구§!: $LOCKED|*Y$/$MAXLOCKED|*Y$\n"
  MONTHLY_BASE_GROWTH:0 "기본: $VALUE|H%2$"
  STATE_POPULATION_GROWTH:0 "§H월간 성장§!: $VALUE|%2$ ( $AVAIL|*+$ 징병 대상자, $LOCKED|*+$ 민간인)"
- LOCAL_MANPOWER_ACCESSIBLE_FACTOR:0 "병역의무자 기본 값: §R-$VAL|%$§!"
- LOCAL_MANPOWER_ACCESSIBLE_NON_CORE_FACTOR:0 "병역 의무자 기본 값(비-핵심 주): §R-$VAL|%$§!"
- LOCAL_MANPOWER_ACCESSIBLE_NON_CORE_TOTAL:0 "서비스 적합도 총합 (비-핵심 주): §R-$VAL|%$§!"
+ LOCAL_MANPOWER_ACCESSIBLE_FACTOR:0 "병역 적합자 기본 값: §R-$VAL|%$§!"
+ LOCAL_MANPOWER_ACCESSIBLE_NON_CORE_FACTOR:0 "병역 적합자 기본 값 (비핵심 주): §R-$VAL|%$§!"
+ LOCAL_MANPOWER_ACCESSIBLE_NON_CORE_TOTAL:0 "병역 적합자 총합 (비핵심 주): §R-$VAL|%$§!"
  STATE_POPULATION_DESC:1 "이 주에서 살고 있는 사람들의 수입니다. 징병제에 의해 일정 %를 육,해,공군을 위한 인력으로 사용할 수 있습니다."
  STATE_POPULATION_VALUE:0 "$VAL|*H$"
- STATE_SET_POLICY:0 "§G클릭하여 $STATE|H$의 점령 정책을 관리한다.§!"
- STATE_NOT_OCCUPIED:0 "§R 점령 정책을 실시하려면 $STATE|H$를 점령해야 합니다.§!"
+ STATE_SET_POLICY:0 "§G클릭하여 $STATE|H$의 점령 정책을 관리합니다.§!"
+ STATE_NOT_OCCUPIED:0 "§R 점령 정책을 실시하려면 $STATE|H$을(를) 점령해야 합니다.§!"
  STATE_CLAIMS:0 "영유권 주장"
  STATE_NO_RESOURCES:0 "§T$STATE|H$에 자원이 없습니다 §!"
- LOCAL_PROVINCE_MODIFIERS:0 "\n§H지역 프로빈스 효과 :§!"
- UNLOCKED_SLOTS:0 "$NUM|Y$/$MAX|Y$ 개의 열린 슬롯"
+ LOCAL_PROVINCE_MODIFIERS:0 "\n§H국지적 효과 :§!"
+ UNLOCKED_SLOTS:0 "$NUM|Y$/$MAX|Y$개의 열린 슬롯"
  UNLOCKED_SLOTS_DESC:0 "열린 슬롯의 양은 해당 주의 인구와 기반 시설에 의해 제한됩니다"
- UNLOCKED_SLOTS_CAP:0 "기술에 의해 $ NUM|Y$로 제한되어 있습니다"
- UNLOCKED_SLOTS_FROM_POPULATION:0 "인구에 의해 $NUM|Y$ 로 제한되어 있습니다"
- UNLOCKED_SLOTS_FROM_INFRASTRUCTURE:0 "기반시설에 의해 $NUM|Y$로 제한되어 있습니다"
+ UNLOCKED_SLOTS_CAP:0 "기술에 의해 $NUM|Y$(으)로 제한됨"
+ UNLOCKED_SLOTS_FROM_POPULATION:0 "인구에 의해 $NUM|Y$(으)로 제한됨"
+ UNLOCKED_SLOTS_FROM_INFRASTRUCTURE:0 "기반시설에 의해 $NUM|Y$(으)로 제한됨"
  UNLOCKED_SLOTS_ABSOLUTE_MAX:0 "최대: $NUM|Y$"
- UNLOCKED_SLOTS_CAP_DESC_HEADER:0 "군사 기술로부터:"
+ UNLOCKED_SLOTS_CAP_DESC_HEADER:0 "기술에 의한 제한:"
  UNLOCKED_SLOTS_FROM_POPULATION_DESC_HEADER:0 "인구에 의한 제한 :"
- UNLOCKED_SLOTS_FROM_INFRASTRUCTURE_DESC_HEADER:0 "인프라에 의한 제한:"
+ UNLOCKED_SLOTS_FROM_INFRASTRUCTURE_DESC_HEADER:0 "기반시설에 의한 제한:"
  UNLOCKED_SLOTS_BASE:0 "기본 제한: $NUM|Y$"
  UNLOCKED_SLOTS_STATE_EXTRA:0 "이 주의 추가 슬롯: $NUM|Y$"
- PROVINCE_STATE_CATERGORY_TOOLTIP:0 "$NAME$ 은 $CATEGORY|Y$ 입니다.\n"
- PROVINCE_STATE_IMPASSABLE:0 "§R통행할 수 없는 지역 - 진입할 수 없습니다.§!"
+ PROVINCE_STATE_CATERGORY_TOOLTIP:1 "항목: $CATEGORY|Y$"
+ PROVINCE_STATE_IMPASSABLE:1 "불가: §R병력 진입이 불가능§!"
  wasteland:0 "불모지"
  city:0 "도시 지역"
- large_city:0 "조밀한 도시지역"
+ large_city:0 "고밀도 도시 지역"
  metropolis:0 "대도시 지역"
- megalopolis:0 "거대 도시지역"
- town:0 "농촌 개발지역"
- large_town:0 "드문드문한 도시지역"
+ megalopolis:0 "휘황찬란한 도시 지역"
+ town:0 "개발된 농촌 지역"
+ large_town:0 "저밀도 도시 지역"
  rural:0 "농촌 지역"
- enclave:0 "타국의 영토"
+ enclave:0 "고립 영토"
  small_island:0 "작은 섬"
  tiny_island:0 "아주 작은 섬"
  pastoral:0 "목축 지역"
- hyvin:0 "개발 농촌 지역"
+ hyvin:0 "개발중인 농촌 지역"
  seven:0 "거대한 도시 지역"
- nine:0 "매우 조밀한 도시 지역"
+ nine:0 "매우 밀집된 도시 지역"
  eleven:0 "초거대 도시 지역"
- OCCUPATION_BREAKDOWN:0 "점령:"
+ OCCUPATION_BREAKDOWN:0 "점령 실패:"
  OCCUPATION_BREAKDOWN_ENTRY:0 "\n$COUNTRY|Y$: $OCCUPATION|Y%0$"
