--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -1,6 +1,6 @@
 l_english:
 
- STATE_1:0 "코르시카"
+ STATE_1:0 "코르스"
  STATE_2:0 "라티움"
  STATE_3:0 "미틀란트"
  STATE_4:0 "니더오스트리아"
@@ -12,11 +12,11 @@ l_english:
  STATE_10:0 "바르샤바"
  STATE_11:0 "빌뉴스"
  STATE_12:0 "리보니아"
- STATE_14:0 "브루타뉴"
+ STATE_14:0 "하우테브루타뉴"
  STATE_13:0 "레벨"
  STATE_15:0 "노르망디"
  STATE_16:0 "일드프랑스"
- STATE_17:0 "프랑슈콩테"
+ STATE_17:0 "파드칼레"
  STATE_18:0 "샹파뉴"
  STATE_19:0 "아키텐"
  STATE_20:0 "리옹"
@@ -27,12 +27,12 @@ l_english:
  STATE_25:0 "리무쟁"
  STATE_26:0 "오베르뉴"
  STATE_27:0 "부르고뉴"
- STATE_28:0 "엘자스-로트링겐"
- STATE_29:0 "릴"
+ STATE_28:0 "엘자스로트링겐"
+ STATE_29:0 "프랑스플렁드흐"
  STATE_30:0 "루아르"
- STATE_31:0 "미디-피레네"
- STATE_32:0 "알프스"
- STATE_33:0 "오를레아네"
+ STATE_31:0 "가론강"
+ STATE_32:0 "론"
+ STATE_33:0 "플렌드라루아"
  STATE_34:0 "왈롱"
  STATE_35:0 "남부 네덜란드"
  STATE_36:0 "북부 네덜란드"
@@ -160,10 +160,10 @@ l_english:
  STATE_158:0 "피에몬테"
  STATE_159:0 "롬바르디아"
  STATE_160:0 "베네토"
- STATE_161:0 "에밀리아로마냐"
+ STATE_161:0 "로마냐"
  STATE_162:0 "투스카나"
  STATE_163:1 "달마티아"
- STATE_164:0 "도데카네스 제도"
+ STATE_164:0 "멘테세아달라르"
  STATE_165:0 "카탈루냐"
  STATE_166:0 "아라곤"
  STATE_167:0 "발렌시아"
@@ -182,8 +182,8 @@ l_english:
  STATE_180:0 "포르투"
  STATE_181:0 "구아르다"
  STATE_182:0 "크레타"
- STATE_183:0 "키프로스"
- STATE_184:0 "귀뮐지나"
+ STATE_183:0 "크브르스"
+ STATE_184:0 "벨로모르스카 트라키야"
  STATE_185:0 "이피로스"
  STATE_186:0 "펠로폰네소스 반도"
  STATE_187:0 "에게해 제도"
@@ -272,11 +272,11 @@ l_english:
  STATE_270:0 "핏케언 제도"
  STATE_271:0 "아디스아바바"
  STATE_272:0 "세네갈"
- STATE_273:0 "리비아 사막"
+ STATE_273:0 "피잔"
  STATE_274:0 "황금 해안"
  STATE_275:0 "트란스발"
  STATE_276:0 "남부 온타리오"
- STATE_277:0 "멕시코 시티"
+ STATE_277:0 "멕시코"
  STATE_278:0 "부에노스 아이레스"
  STATE_279:0 "산티아고"
  STATE_280:0 "마토 그로소"
@@ -285,12 +285,12 @@ l_english:
  STATE_283:0 "간쑤"
  STATE_284:0 "북섬"
  STATE_285:0 "뉴사우스웨일스"
- STATE_286:0 "사이공"
+ STATE_286:0 "코친차이나"
  STATE_287:0 "타클라마칸 사막"
  STATE_288:1 "양곤"
  STATE_289:0 "시암"
  STATE_290:0 "스페인령 아프리카"
- STATE_291:0 "바그다드"
+ STATE_291:0 "바그다트"
  STATE_292:0 "네지드"
  STATE_293:0 "예멘"
  STATE_294:0 "오만"
@@ -303,7 +303,7 @@ l_english:
  STATE_301:0 "파라과이"
  STATE_302:0 "라 파스"
  STATE_303:0 "리마"
- STATE_304:0 "파나마 도시"
+ STATE_304:0 "파나마"
  STATE_305:0 "에콰도르"
  STATE_306:0 "쿤디나마르카"
  STATE_307:0 "야노스"
@@ -333,29 +333,29 @@ l_english:
  STATE_331:0 "뉴펀들랜드"
  STATE_332:0 "래브라도"
  STATE_333:0 "북부 보르네오"
- STATE_334:0 "칼리만탄"
- STATE_335:0 "자바"
+ STATE_334:0 "서 칼리만탄"
+ STATE_335:0 "중앙 자바"
  STATE_336:0 "싱가포르"
  STATE_337:0 "페로 제도"
  STATE_338:0 "글로스터셔"
  STATE_339:0 "이즈미르"
  STATE_340:0 "부르사"
  STATE_341:0 "에디르네"
- STATE_342:0 "안탈리아"
+ STATE_342:0 "물가"
  STATE_343:0 "아피온"
  STATE_344:0 "아다나"
- STATE_345:0 "메르신"
+ STATE_345:0 "시바스"
  STATE_346:0 "코냐"
- STATE_347:0 "볼루"
- STATE_348:0 "카이세리"
- STATE_349:0 "시바스"
+ STATE_347:0 "겔리볼루"
+ STATE_348:0 "닝샤"
+ STATE_349:0 "마라스"
  STATE_350:0 "디야르바키르"
  STATE_351:0 "볼로그다"
  STATE_352:0 "반"
- STATE_353:0 "에르주룸"
- STATE_354:0 "트라브존"
+ STATE_353:0 "암도"
+ STATE_354:0 "귀뮈샤네"
  STATE_355:0 "삼순"
- STATE_356:0 "카스타모누"
+ STATE_356:0 "시노프"
  STATE_357:0 "메인"
  STATE_358:0 "뉴욕시"
  STATE_359:0 "뉴저지"
@@ -416,11 +416,11 @@ l_english:
  STATE_414:0 "케르만"
  STATE_415:0 "헤라트"
  STATE_416:0 "호라산"
- STATE_417:0 "하마단"
- STATE_418:0 "셈난"
- STATE_419:0 "타브리즈"
- STATE_420:0 "길란"
- STATE_421:0 "케르만샤"
+ STATE_417:0 "서부 아제르바이잔"
+ STATE_418:0 "골레스탄"
+ STATE_419:0 "동부 아제르바이잔"
+ STATE_420:0 "마잔다란"
+ STATE_421:0 "쿠르디스탄"
  STATE_422:0 "실론"
  STATE_423:0 "마두라이"
  STATE_424:0 "안드라"
@@ -447,14 +447,14 @@ l_english:
  STATE_445:0 "퀘타"
  STATE_446:0 "카이로"
  STATE_447:0 "알렉산드리아"
- STATE_448:0 "트리폴리"
- STATE_449:0 "엘 아게일라 "
+ STATE_448:0 "타라불루스"
+ STATE_449:0 "알 우케일라"
  STATE_450:0 "벵가지"
- STATE_451:0 "데르나"
+ STATE_451:0 "다르나"
  STATE_452:0 "메르사마트루"
- STATE_453:0 "시나이 반도"
- STATE_454:0 "팔렌스타인"
- STATE_455:0 "요르단"
+ STATE_453:0 "시나"
+ STATE_454:0 "쿠뒤시스 세리프"
+ STATE_455:0 ""
  STATE_456:0 "아스완"
  STATE_457:0 "동부 사막"
  STATE_458:0 "튀니스"
@@ -537,7 +537,7 @@ l_english:
  STATE_535:0 "고신에쓰"
  STATE_536:0 "홋카이도"
  STATE_537:0 "카라푸토"
- STATE_538:0 "에콰도르콩고"
+ STATE_538:0 "에콰도리얼콩고"
  STATE_539:0 "가봉"
  STATE_540:0 "앙골라"
  STATE_541:0 "남서아프리카"
@@ -552,8 +552,8 @@ l_english:
  STATE_550:0 "에리트레아"
  STATE_551:0 "하르툼"
  STATE_552:0 "서부 사막"
- STATE_553:0 "레바논"
- STATE_554:0 "다마스쿠스"
+ STATE_553:0 "베이루트"
+ STATE_554:0 "수리예"
  STATE_555:0 "쿠릴 열도"
  STATE_556:0 "프랑스령 수단"
  STATE_557:0 "모리타니아"
@@ -614,8 +614,8 @@ l_english:
  STATE_612:0 "차하르"
  STATE_613:0 "난징"
  STATE_614:0 "지리"
- STATE_615:0 "산시"
- STATE_616:0 "닝샤"
+ STATE_615:0 "동부 산시"
+ STATE_616:0 "내몽골"
  STATE_617:0 "우루무치"
  STATE_618:0 "중가리아"
  STATE_619:0 "야르칸드"
@@ -660,26 +660,26 @@ l_english:
  STATE_658:0 "아부다비"
  STATE_659:0 "아덴"
  STATE_660:0 "적도 아프리카"
- STATE_661:0 "트리폴리타니아"
+ STATE_661:0 "트리불리탄"
  STATE_662:0 "시르테"
- STATE_663:0 "키레나이카"
+ STATE_663:0 "바카"
  STATE_664:0 "게머와 키선"
  STATE_665:0 "가베스"
  STATE_666:0 "라플란드"
- STATE_667:0 "소 순다 열도"
- STATE_668:0 "몰루카"
- STATE_669:0 "서뉴기니"
+ STATE_667:0 "소네다 열도"
+ STATE_668:0 "말루쿠"
+ STATE_669:0 "북서 뉴기니"
  STATE_670:0 "라오스"
- STATE_671:0 "하노이"
- STATE_672:0 "수마트라"
- STATE_673:0 "술라웨시"
+ STATE_671:0 "통킨"
+ STATE_672:0 "동부 수마트라"
+ STATE_673:0 "셀레베스"
  STATE_674:0 "호주 중부"
  STATE_675:0 "알 하자라"
- STATE_676:0 "모술"
- STATE_677:0 "알레포"
+ STATE_676:0 "무술"
+ STATE_677:0 "할레프"
  STATE_678:0 "루브 알하리 사막"
- STATE_679:0 "헤자즈"
- STATE_680:0 "데이르에조르"
+ STATE_679:0 "히카즈"
+ STATE_680:0 "조르산자크"
  STATE_681:0 "서부 케이프"
  STATE_682:0 "북부 온타리오"
  STATE_683:0 "북부 퀘벡"
@@ -734,7 +734,7 @@ l_english:
  STATE_732:0 "페르가나"
  STATE_733:0 "안다만 제도"
  STATE_734:0 "티레니어스 제도"
- STATE_735:0 "사보이아"
+ STATE_735:0 "사부아"
  STATE_736:0 "퀴스트란트"
  STATE_737:0 "비스마르크 군도"
  STATE_738:0 "아루 제도"
@@ -753,7 +753,7 @@ l_english:
  STATE_751:0 "시라트말레이"
  STATE_752:0 "하이드라마우"
  STATE_753:0 "수에즈 운하"
- STATE_754:0 "메디나"
+ STATE_754:0 "메디네"
  STATE_755:0 "토로페츠"
  STATE_756:1 "하부 샨"
  STATE_757:0 "카이저빌헬름란트"
@@ -762,29 +762,29 @@ l_english:
  STATE_760:0 "로망디"
  STATE_761:0 "티치노"
  STATE_762:0 "니스"
- STATE_763:0 "코티 알프스"
- STATE_764:0 "안지오"
+ STATE_763:0 "알프스"
+ STATE_764:0 "비테르보"
  STATE_765:0 "코소보"
  STATE_766:0 "지로카스터르"
  STATE_767:0 "니시"
  STATE_768:0 "테살리아"
- STATE_769:0 "카발라"
+ STATE_769:0 "동부 마케도니야"
  STATE_770:0 "플로븐"
  STATE_771:0 "바르나"
  STATE_772:0 "도브루자"
  STATE_773:0 "콘스탄티니예"
- STATE_774:0 "이즈미트"
+ STATE_774:0 "북간수"
  STATE_775:0 "슈타이어마르크"
  STATE_776:0 "서프로이센"
  STATE_777:0 "카토비체"
  STATE_778:0 "옘틀란드"
  STATE_779:0 "난치히"
- STATE_780:0 "자를란트"
+ STATE_780:0 "바덴"
  STATE_781:0 "웨스트라인란트"
  STATE_782:0 "북부 슐레스비히"
  STATE_783:0 "트렌티노"
  STATE_784:0 "부르겐란트"
- STATE_785:0 "동부 샹파뉴"
+ STATE_785:0 "플라투 로레인"
  STATE_786:0 "도이치쥐트메렌" 
  STATE_787:0 "키즐랴르"
  STATE_788:0 "남부 간쑤"
@@ -802,8 +802,8 @@ l_english:
  STATE_800:0 "루펑"
  STATE_801:0 "산터우"
  STATE_802:0 "샤면"
- STATE_803:0 "왱저우"
- STATE_804:0 "반다르아바스"
+ STATE_803:0 "원저우"
+ STATE_804:0 "북부 호라산"
  STATE_805:0 "틀렘센"
  STATE_806:0 "기니"
  STATE_807:0 "엘픈바인쿠스트"
@@ -811,14 +811,14 @@ l_english:
  STATE_809:0 "니제르"
  STATE_810:0 "우스카메노고르스크"
  STATE_811:0 "미누신스크"
- STATE_812:0 "시라아 사막"
+ STATE_812:0 "바스라"
  STATE_813:0 "남 보르베크랜드"
  STATE_814:0 "우라타라칸드"
  STATE_815:0 "고라크푸르"
  STATE_816:0 "동 구이저우"
- STATE_817:0 "론"
+ STATE_817:0 "루시용"
  STATE_818:0 "관타나모 만"
- STATE_819:0 "키르쿠크"
+ STATE_819:0 "케르퀴크"
  STATE_820:0 "산티아고 쿠바"
  STATE_821:0 "파블로흐라드"
  STATE_822:0 "란나"
@@ -842,7 +842,7 @@ l_english:
  STATE_840:0 "우시마"
  STATE_841:0 "피로트"
  STATE_842:0 "테구시갈파"
- STATE_843:0 "리아우 섬" 
+ STATE_843:0 "남서 뉴기니" 
  STATE_844:0 "트론헤임"
  STATE_845:0 "카하마르카"
  STATE_846:0 "말레이시아"
@@ -871,7 +871,7 @@ l_english:
  STATE_869:0 "르완다"
  STATE_870:0 "부룬디"
  STATE_871:0 "니아살랜드"
- STATE_872:0 "아리카"
+ STATE_872:0 "타크나"
  STATE_873:0 "타라파카"
  STATE_874:0 "아타카마"
  STATE_875:0 "웨스트바나"
@@ -910,12 +910,12 @@ l_english:
  STATE_908:0 "보후슬렌"
  STATE_909:0 "토르네달렌"
  STATE_910:0 "니제르 사막"
- STATE_911:0 "다푸르"
+ STATE_911:0 "보르코우에네디"
  STATE_912:0 "볼리바르"
  STATE_913:0 "보르누"
  STATE_914:0 "카빈다"
  STATE_915:0 "하일"
- STATE_916:0 "므반자 콩코"
+ STATE_916:0 "콩코 앤티고"
  STATE_917:0 "룬다-초크웨 옥시덴탈"
  STATE_918:0 "카게라"
  STATE_919:0 "오로미아"
@@ -942,13 +942,13 @@ l_english:
  STATE_940:0 "올리벤사"
  STATE_941:0 "독일령 사모아"
  STATE_942:0 "포어아를베르크"
- STATE_943:0 "알타 사보이아"
+ STATE_943:0 "하우테사부아"
  STATE_944:0 "하라르"
  STATE_945:0 "북부 케이프"
  STATE_946:0 "동부 케이프"
  STATE_947:0 "오라녜-프리슈타트"
  STATE_948:0 "느고마"
- STATE_949:0 "부카부"
+ STATE_949:0 "마니에마"
  STATE_950:0 "이냠바느-가자"
  STATE_951:0 "마빙가"
  STATE_952:0 "아다마와"
@@ -975,10 +975,55 @@ l_english:
  STATE_973:0 "남 뉴카메룬"
  STATE_974:0 "우방기"
  STATE_975:0 "도이치차드"
- STATE_976:0 "룰루스타드"
+ STATE_976:0 "카사이"
  STATE_977:0 "키부"
- STATE_978:0 "캔버라"
- STATE_979:0 "북부 퀸즐랜드"
- STATE_980:0 "킴벌리"
- STATE_981:0 "필바라"
- STATE_982:0 "살로니카"
+STATE_978:0 "림뷔흐르"
+STATE_979:0 "네덜란드령 플랑드르"
+STATE_980:0 "플랑드르 로마네"
+STATE_981:0 "나지란"
+STATE_982:0 "아시르"
+STATE_983:0 "브르타뉴"
+STATE_984:0 "피레네"
+STATE_985:0 "캔버라"
+STATE_986:0 "북퀸즐랜드"
+STATE_987:0 "킴벌리"
+STATE_988:0 "필바라"
+STATE_989:0 "살로니카"
+STATE_990:0 "자우프"
+STATE_991:0 "하사"
+STATE_992:0 "카심"
+STATE_993:0 "카타르"
+STATE_994:0 "알 에사쉬"
+STATE_995:0 "알 쿠르마"
+STATE_996:0 "웨이하이웨이"
+STATE_997:0 "나히체반"
+STATE_998:0 "슈니크"
+STATE_999:0 "나고르노카라바흐"
+STATE_1000:0 "카스이디르"
+STATE_1001:0 "라지스탄"
+STATE_1002:0 "사사리"
+STATE_1003:0 "발레다오스타"
+STATE_1004:0 "에밀리아"
+STATE_1005:0 "움브리아"
+STATE_1006:0 "바실리카타"
+STATE_1007:0 "할랄리브"
+STATE_1008:0 "지르가"
+STATE_1009:0 "쿠프라"
+STATE_1010:0 "다푸르"
+STATE_1011:0 "센나르"
+STATE_1012:0 "남부 광동"
+STATE_1013:0 "북부 후난"
+STATE_1014:0 "동부 안후이"
+STATE_1015:0 "산시"
+STATE_1016:0 "동 칼리만탄"
+STATE_1017:0 "네덜란드령 티모르"
+STATE_1018:0 "플로레스 제도"
+STATE_1019:0 "동부 자바"
+STATE_1020:0 "바타비아"
+STATE_1021:0 "남부 수마트라"
+STATE_1022:0 "중앙 수마트라"
+STATE_1023:0 "북부 수마트라"
+STATE_1024:0 "도파르"
+STATE_1025:0 "콩고령 우방기"
+STATE_1026:0 "초포"
+STATE_1027:0 "차코 볼리비아노"
