--- a/Kaiserreich Korean Translation/localisation/KR_Theorists_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Theorists_l_english.yml
@@ -81,11 +81,11 @@ santuri_mustafa_bey:0 "Santuri Mustafa Bey"
 osman_besim_bey:0 "Osman Besim Bey"
 
 ## Flanders-Wallonia, Flanders and Wallonia####
-BEL_Raoul_van_Overstraeten_mil_th:0 "Raoul van Overstraeten"
-BEL_karel_jan_bossart:0 "Karel Jan Bossart"
-BEL_Robert_Desmet_mil_th:0 "Robert Desmet"
-FLN_Raoul_van_Overstraeten_mil_th:0 "Raoul van Overstraeten"
-FLN_karel_jan_bossart:0 "Karel Jan Bossart"
-FLN_Robert_Desmet_mil_th:0 "Robert Desmet"
-WLL_Jules_Vincotte_mil_th:0 "Jules Vincotte"
-WLL_Andre_Becquet_mil_th:0 "André Becquet"
+BEL_Raoul_van_Overstraeten_mil_th:0 "라울 반 오베르스트라에텐"
+BEL_karel_jan_bossart:0 "카렐 얀 보샬트"
+BEL_Robert_Desmet_mil_th:0 "로버트 데스메트"
+FLN_Raoul_van_Overstraeten_mil_th:0 "라울 반 오베르스트라에텐"
+FLN_karel_jan_bossart:0 "카렐 얀 보샬트"
+FLN_Robert_Desmet_mil_th:0 "로버트 데스메트"
+WLL_Jules_Vincotte_mil_th:0 "쥘 빈코트"
+WLL_Andre_Becquet_mil_th:0 "안드레 베케르"
